<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="recording_on">Recording activated</string>
    <string name="recording_off">Recording deactivated</string>
    
    <string name="app_name">ZephyrLogger</string>
    <string name="menu_settings">Settings</string>
    
    <string name="notConnected">You are not connected to a Zephyr HxM</string>
    <string name="btNotEnabled">Bluetooth not enabled.</string>
    <string name="connecting">connecting...</string>
    <string name="connectedTo">connected: </string>
    <string name="initializing">initializing</string>
    <string name="nonePaired">No Zephyr HxM devices have been paired?</string>
    <string name="noBluetooth">No Bluetooth?</string>
    
    <!-- Common strings -->
    <string name="default_value">-</string>
    <string name="default_hr_value">--- bpm</string>
    <string name="default_speed_value">--- kmh</string>
    <string name="default_distance_value">--- m</string>
    
    <!-- Bluetooth indicator -->
    <string name="zephyr_connected">Connected to Zephyr</string>
    <string name="zephyr_not_connected">Not connected to Zephyr</string>
    
    <!-- Basic Status Compound Control -->
    <string name="heart_rate_label">Heart rate:</string>
    <string name="speed_label">Speed:</string>
    <string name="distance_label">Distance:</string>
    <string name="strides_label">Strides:</string>
    
    <!-- RecordingFragment -->
    <string name="timer_label">Time recorded</string>
    <string name="record_button_start">Start Recording</string>
    <string name="record_button_stop">Stop Recording</string>
    
    <string name="average_heart_rate_label">Average bpm:</string>
    <string name="average_speed_label">Average kmh:</string>
    <string name="average_distance_label">Total distance:</string>
    <string name="average_strides_label">Total strides:</string>
    
    <!--
        Some identifiers used to pass information around our application 
        Defining them within this resource ensures that each value is unique 
        and allows us to associate a human readable string to use when
        logging or displaying debugging and error messages      
    -->
    <string name="HXM_SERVICE_MSG_STATE">MESSAGE_STATE_CHANGE: message from HxM service indicating that the state of the service has been updated, and may have changed</string>
    <string name="HXM_SERVICE_MSG_READ">HXM_SERVICE_MSG_READ: message from HxM service with data read from the device</string>
    <string name="HXM_SERVICE_MSG_DEVICE_NAME">HXM_SERVICE_MSG_DEVICE_NAME: message from HxM service indicating the name of the device that a connection is associated with</string>
    <string name="HXM_SERVICE_MSG_TOAST">HXM_SERVICE_MSG_TOAST: message from HxM service requesting a toast be shown to the user</string>
        
    <string name="HXM_SERVICE_RESTING">HXM_SERVICE_RESTING: HxM service is at rest</string>
    <string name="HXM_SERVICE_CONNECTING">HXM_SERIVICE_CONNECTING: HxM service is trying to connect to an HxM</string>
    <string name="HXM_SERVICE_CONNECTED">HXM_SERVICE_CONNECTED: HxM service is connected to a HxM</string>

</resources>