<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/border"
    android:layout_gravity="center_horizontal" >
    
    <!-- Heart rate -->
    <TextView
        android:id="@+id/heart_rate_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/heart_rate_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
   	<TextView
        android:id="@+id/heart_rate_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="10dp"
        android:layout_toRightOf="@+id/heart_rate_label"
        android:text="@string/default_hr_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <!-- Speed -->
    <TextView
        android:id="@+id/speed_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/heart_rate_label"
        android:layout_alignLeft="@+id/heart_rate_label"
        android:text="@string/speed_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
   	<TextView
        android:id="@+id/speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_alignLeft="@+id/heart_rate_text"
        android:layout_alignBaseline="@+id/speed_label"
        android:text="@string/default_speed_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   	
   	<!-- Distance -->
    <TextView
        android:id="@+id/distance_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_below="@+id/speed_label"
        android:layout_alignLeft="@+id/speed_label"
        android:text="@string/distance_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
   	<TextView
        android:id="@+id/distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_alignLeft="@+id/heart_rate_text"
        android:layout_alignBaseline="@+id/distance_label"
        android:text="@string/default_distance_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   	
   	<!-- Strides -->
	<TextView
        android:id="@+id/strides_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/distance_label"
        android:layout_alignLeft="@+id/distance_label"
        android:text="@string/strides_label"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
   	<TextView
        android:id="@+id/strides_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_alignBaseline="@+id/strides_label"
        android:layout_alignLeft="@+id/heart_rate_text"
        android:text="@string/default_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />
   	
   	
</RelativeLayout>