<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <!-- Timer -->
    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:text="@string/default_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <TextView
        android:id="@+id/timer_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer_text"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:text="@string/timer_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- Toggle Recording -->
    <Button
        android:id="@+id/toggle_record_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timer_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/record_button_start" />
    
    <!-- History / Averages -->
    <dk.corthmann.zephyrlogger.view.RecordingAverageControl
        android:id="@+id/recording_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toggle_record_button"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_centerHorizontal="true" />
    
    
    
    
</RelativeLayout>